# veritas

./: README.md  installation.sh  pyproject.toml  run_system.sh  system_inference.sh
OldJoe/: .dockerignore  .gitignore  Dockerfile  README.md  cluster.Dockerfile  docker-entrypoint.sh  prepare_leaderboard_submission.py
OldJoe/veritas/: judge.py  qgen.py  rrank.py
OldJoe/veritas/conf/: build.yaml  embed.yaml  merge.yaml  run.yaml
OldJoe/veritas/conf/hydra/job_logging/: custom.yaml
OldJoe/veritas/kb/: chunk.py  init.sql
OldJoe/veritas/scripts/: build.py  chunk.py  dump.sh  embed.py  insert.sh  run.py
OldJoe/veritas/training/: sft.py  utils.py
veritas/: agen.py
veritas/conf/: chunk.yaml
veritas/kb/: fs.py  pg.py
veritas/scripts/: build.sh  merge.py  restore.sh
