[project]
name = "veritas"
version = "0.1.0"
description = "Fact checking"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2.3",
  "pgvector>=0.4.0",
  "psycopg-pool>=3.2.6",
  "psycopg>=3.2.6",
  "rich>=13.9.4",
  "semantic-text-splitter>=0.25.1",
  "setuptools>=79.0.0",
  "tqdm>=4.67.1",
  "requests>=2.32.3",
  "hydra-core>=1.3.2",
  "aiofile>=3.9.0",
  "huggingface-hub[cli]>=0.30.2",
  "hf-xet>=1.0.3",
  "hf-transfer>=0.1.9",
  "instructor>=1.7.9",
  "flashinfer-python>=0.2.5",
  "sentence-transformers>=4.1.0",
  "torch>=2.5.1",
  "transformers>=4.51.3",           # Qwen 3: https://github.com/vllm-project/vllm/issues/17327
  "vllm>=0.8.5",                    # Qwen 3: https://github.com/vllm-project/vllm/issues/17327
]

[project.optional-dependencies]
eval = ["nltk>=3.9.1"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.pyright]
venvPath = "."
venv = ".venv"
